Update swagger config
