# api/swagger.yaml
@@ -1,19 +1,19 @@
 ---
 swagger: "2.0"
 info:
-  description: "This is a sample server Petstore server.  You can find out more about\
+  description: "This is a sample server Events server.  You can find out more about\
     \     Swagger at [http://swagger.io](http://swagger.io) or on [irc.freenode.net,\
     \ #swagger](http://swagger.io/irc/).      For this sample, you can use the api\
     \ key `special-key` to test the authorization     filters."
   version: "1.0.0"
-  title: "Swagger Petstore"
+  title: "Swagger Events"
   termsOfService: "http://swagger.io/terms/"
   contact:
     email: "apiteam@swagger.io"
   license:
     name: "Apache 2.0"
     url: "http://www.apache.org/licenses/LICENSE-2.0.html"
-host: "petstore.swagger.io"
+host: "events.swagger.io"
 basePath: "/v2"
 tags:
 - name: "event"
@@ -137,6 +137,108 @@ paths:
         404:
           description: "Event not found"
       x-swagger-router-controller: "Event"
+  /event/{id}/comment/{comment_id}:
+    delete:
+      tags:
+      - "comment"
+      summary: "Delete comment"
+      description: "This can only be done by the logged in event."
+      operationId: "deleteComment"
+      produces:
+      - "application/json"
+      parameters:
+      - name: "id"
+        in: "path"
+        description: "The name that needs to be deleted"
+        required: true
+        type: "string"
+      - name: "comment_id"
+        in: "path"
+        description: "The name that needs to be deleted"
+        required: true
+        type: "string"
+      responses:
+        400:
+          description: "Invalid id supplied"
+        404:
+          description: "Event not found"
+      x-swagger-router-controller: "Comment"
+  /event/{id}/comment:
+    post:
+      tags:
+      - "comment"
+      summary: "Create comment"
+      description: "This can only be done by the logged in event."
+      operationId: "createComment"
+      produces:
+      - "application/json"
+      parameters:
+      - name: "id"
+        in: "path"
+        description: "The name that needs to be deleted"
+        required: true
+        type: "string"
+      - in: "body"
+        name: "body"
+        description: "Created event's comment"
+        required: true
+        schema:
+          $ref: "#/definitions/Comment"
+      responses:
+        200:
+          description: "successful operation"
+          schema:
+            $ref: "#/definitions/Comment"
+      x-swagger-router-controller: "Comment"
+  /settings/{type}:
+    get:
+      tags:
+      - "settings"
+      summary: "Get settings by type"
+      description: ""
+      operationId: "getSettingsByType"
+      produces:
+      - "application/json"
+      parameters:
+      - name: "type"
+        in: "path"
+        description: "Settings type"
+        required: true
+        type: "string"
+      responses:
+        200:
+          description: "successful operation"
+          schema:
+            type: "object"
+        400:
+          description: "Invalid id supplied"
+        404:
+          description: "Event not found"
+      x-swagger-router-controller: "Event"
+    put:
+      tags:
+      - "settings"
+      summary: "Update bank settings"
+      description: "This can only be done by the logged in event."
+      operationId: "updatebankSettings"
+      produces:
+      - "application/json"
+      parameters:
+      - name: "type"
+        in: "path"
+        description: "The name that needs to be deleted"
+        required: true
+        type: "string"
+      - in: "body"
+        name: "body"
+        description: "Update settings"
+        required: true
+        schema:
+          type: "object"
+      responses:
+        default:
+          description: "successful operation"
+      x-swagger-router-controller: "Event"
 securityDefinitions:
   petstore_auth:
     type: "oauth2"
@@ -177,9 +279,6 @@ definitions:
       date: "date"
       number: "number"
       comments:
-      - id: "id"
-        text: "text"
-        time: "time"
       - id: "id"
         text: "text"
         time: "time"
